# ratty

./: .gitignore  Cargo.toml  README.md
doc/: architecture.md  design-principles.md  frame-architecture.md  glazing-architecture.md  layered-architecture.md  pane-architecture.md  roadmap.md  sash-architecture.md  sill-architecture.md
src/: config.rs  main.rs  renderer.rs  terminal.rs
src/frame/: commands.rs  config.rs  errors.rs  events.rs  interface.rs  mod.rs  tests.rs
src/glazing/: config.rs  errors.rs  events.rs  interface.rs  layout.rs  mod.rs  renderer.rs  tests.rs  theme.rs  viewport.rs
src/pane/: buffer.rs  config.rs  cursor.rs  errors.rs  events.rs  interface.rs  mod.rs  pty.rs  terminal.rs  tests.rs
src/platform/: macos.rs  mod.rs
src/sash/: config.rs  errors.rs  events.rs  interface.rs  layout.rs  mod.rs  tabs.rs  tests.rs  theme.rs
src/sill/: clipboard.rs  commands.rs  config.rs  errors.rs  events.rs  interface.rs  keyboard.rs  mod.rs  mouse.rs  selection.rs  tests.rs
